# vapoursynth-blackmagicraw-source

./: .gitignore  CHANGELOG.md  LICENSE  PLAN.md  README.md  THIRD_PARTY_NOTICES.md  build.zig  build.zig.zon  pyproject.toml
doc/: cuda-benchmark.md  gpu-benchmark.md
scripts/: build_pypi_wheels.py
src/avisynth/: avs.zig  avs_loader.c  avs_win_min.h  exports.def  plugin.zig
src/core/: audio.zig  core.zig  decoder.zig  formats.zig  meta.zig  sync.zig
src/core/braw/: api.zig  cuda.zig  loader.zig  metal.zig  opencl.zig  strings.zig  variant.zig
src/vapoursynth/: plugin.zig
test/bench/: bench_vs.py  braw_bench.cpp  braw_bench_mac.mm
test/oracle/: dump_frame.cpp
test/python/: test_source.py
tools/: build-oracle.sh  extract-sdk.sh  package-release.sh  sdk-manifest.sha256
tools/braw-probe/: main.zig
